plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.example.recruit'
    compileSdk 35

    defaultConfig {
        applicationId "com.example.recruit"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    testImplementation 'org.mockito:mockito-core:3.+'
    testImplementation 'org.powermock:powermock-api-mockito2:2.+'
    testImplementation 'org.powermock:powermock-module-junit4:2.+'
}

tasks.withType(Test) {
    jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
    jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
}
